--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,12 @@
 name = "rust_macro"
 version = "0.1.0"
 edition = "2021"
+[lib]
+proc-macro = true
+[dev-dependencies]
+anyhow = "1.0.95"
 
 [dependencies]
-anyhow = "1.0.95"
+proc-macro2 = "1.0.93"
+quote = "1.0.38"
+syn = { version = "2.0.96", features = ["extra-traits"] }
